# blaze

./: .editorconfig  .gitattributes  .gitignore  Doxyfile  Makefile  README.md  blaze.c  blaze.h  build_and_test.sh  cassert.h  lcov-badger.py  package.json  test.sh  test_draw_dynamic.cap  valgrind.sh  valgrind.supp
blaze/: blaze.c.func-sort-c.html  blaze.c.func.html  blaze.c.gcov.html  index-sort-f.html  index-sort-l.html  index.html
docs/: INDEX.md
docs/api/: README_8md.html  annotated.html  annotated.js  blaze_8c.html  blaze_8c.js  blaze_8h.html  blaze_8h.js  blaze_8h_source.html  cassert_8h.html  cassert_8h.js  cassert_8h_source.html  classes.html  doxygen_sqlite3.db  files.html  files.js  functions.html  functions_vars.html  globals.html  globals_a.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_dup.js  globals_enum.html  globals_eval.html  globals_f.html  globals_func.html  globals_g.html  globals_h.html  globals_i.html  globals_l.html  globals_m.html  globals_n.html  globals_o.html  globals_p.html  globals_r.html  globals_s.html  globals_t.html  globals_type.html  (+65 more)
docs/api/search/: all_0.js  all_1.js  (+80 more)
docs/coverage/: index-sort-f.html  index-sort-l.html  index.html
glad/src/: glad.c
rust/: Cargo.toml  build.rs  test.sh  wrapper.h
rust/src/: blend.rs  dynamic.rs  internal.rs  lib.rs  texture.rs
rust/tests/: bmp.rs  mod.rs
test/: common.c  common.h  test_blend_modes.c  test_custom_shader.c  test_draw_dynamic.c  test_draw_static.c  test_init_shutdown.c  test_multitexturing.c  test_png_loading.c  test_render_target.c
(+7 files in other folders)
