[package]
name = "blaze_rs"
version = "0.1.0"
authors = ["Adel Vilkov <vilkov.adel@gmail.com>"]
edition = "2018"

[dependencies]
bitflags = "1.0.4"
bytes = "0.4.11"
enum_primitive = "0.1.1"

[build-dependencies]
bindgen = "0.47.1"

[dev-dependencies]
sdl2 = { git = "https://github.com/RaZeR-RBI/rust-sdl2.git", branch = "feature/sdl-2.0.2" }
